--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="betoumpierrez.css">
+<link rel="stylesheet" type="text/css" href="/betoumpierrez.css">
 <title>Page Title</title>
 </head>
 <body>
