Barra de navegación agregada.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>Roberto Umpiérrez // Diseño Web // Montevideo, Uruguay //</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -32,6 +32,12 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
+    <nav>
+      <ul>
+        <li><a href="#">betoumpierrez</a></li>
+        <li><a href="#">link1</a></li>
+      </ul>
+    </nav>
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>Basic Page</h4>
