--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
-    <nav>
-      <ul>
-        <li><a href="#">betoumpierrez</a></li>
-        <li><a href="#">link1</a></li>
-      </ul>
-    </nav>
+    <ul id="nav">
+    	<li><a href="#">About Us</a></li>
+    	<li><a href="#">Our Products</a></li>
+    	<li><a href="#">FAQs</a></li>
+    	<li><a href="#">Contact</a></li>
+    	<li><a href="#">Login</a></li>
+    </ul>
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>Basic Page</h4>
