--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <ul id="nav">
+  <div class="container u-full-width">
+    <ul id="nav u-full-width">
     	<li><a href="#">About Us</a></li>
     	<li><a href="#">Our Products</a></li>
     	<li><a href="#">FAQs</a></li>
