--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container u-full-width">
-    <ul id="nav u-full-width">
-    	<li><a href="#">About Us</a></li>
+  <div class="container, u-full-width">
+    <ul id="nav, u-full-width">
+    	<li><a href="#"><h4>betoumpierrez</h4></a></li>
     	<li><a href="#">Our Products</a></li>
     	<li><a href="#">FAQs</a></li>
     	<li><a href="#">Contact</a></li>
