--- a/index.html
+++ b/index.html
@@ -29,23 +29,17 @@
 </head>
 <body>
 
-  <!-- Primary Page Layout
+  <!-- Comienza Estructura de la Web
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container, u-full-width">
-    <ul id="nav, u-full-width">
-    	<li><a href="#"><h4>betoumpierrez</h4></a></li>
-    	<li><a href="#">Our Products</a></li>
-    	<li><a href="#">FAQs</a></li>
-    	<li><a href="#">Contact</a></li>
-    	<li><a href="#">Login</a></li>
-    </ul>
-    <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
-      </div>
+<section id="hero" class="hero u-full-width">
+  <div id="hero image"></div>
+  <div class="cotainer centered">
+    <div class="twelve-columns">
+      <h1 class="separator">Hola! Soy Beto!</h1>
+      <h2>Hago webs simples y fáciles de usar para personas y pequeñas empresas</h2>
     </div>
   </div>
+</section>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
