--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <section id="hero" class="hero u-full-width">
   <div id="hero image"></div>
-  <div class="cotainer centered">
+  <div class="cotainer center">
     <div class="twelve-columns">
       <h1 class="separator">Hola! Soy Beto!</h1>
       <h2>Hago webs simples y fáciles de usar para personas y pequeñas empresas</h2>
