--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
   <!-- Comienza Estructura de la Web
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <section id="hero" class="hero u-full-width">
-  <div id="hero image"></div>
-  <div class="container center">
-    <div class="twelve-columns">
+  <div class="container">
+    <div class="row">
+      <div class="twelve-columns">
       <h1>Hola! Soy Beto!</h1>
       <h2>Hago webs simples y fáciles de usar para personas y pequeñas empresas</h2>
+      </div>
     </div>
   </div>
 </section>
