--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- Comienza Estructura de la Web
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container header">
+  <div class="container header u-full-width">
     <div class="row">
       <div class="twelve-columns">
       <h1>Hola! Soy Beto!</h1>
