--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
   <!-- Comienza Estructura de la Web
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container header u-full-width">
+<section class="u-full-width header">
+  <div class="container">
     <div class="row">
       <div class="twelve-columns">
       <h1>Hola! Soy Beto!</h1>
@@ -39,6 +40,7 @@
       </div>
     </div>
   </div>
+</section>
 
 
 
