container con margen superior

--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
   <div class="container">
     <div class="row">
       <div class="twelve-columns">
-      <h1>Hola! Soy Beto!</h1>
-      <h2>Hago webs simples y fáciles de usar para personas y pequeñas empresas</h2>
+      <h1 style="color: white; text-align: center;">Hola! Gracias por visitarme.</h1>
+      <h2 style="color: white; text-align: center;">Mi nombre es Roberto Umpiérrez y me dedico a hacer webs simples para personas y pequeñas empresas.</h2>
       </div>
     </div>
   </div>
 </section>
+<section class="u-full-width work">
+  </section>
 
 
 
